--- a/index.html
+++ b/index.html
@@ -66,13 +66,13 @@
 
           </form> -->
           <div class="row me-2 gx-5 ">
-            <div class="col-lg-8 col-sm-10  me-lg-0 me-sm-3">
+            <div class="col-lg-8 col-sm-10 col-xs-10   me-lg-0 me-sm-3 me-xs-1">
               <input class="form-control  rounded-3 mb-lg-0  mb-sm-3 ms-lg-0 ms-sm-5" type="search" placeholder="Search" aria-label="Search">
             </div>
-            <div class="col-lg-2 col-sm-2 ms-lg-0 ms-sm-3">
+            <div class="col-lg-2 col-sm-2 col-xs-2 ms-lg-0 ms-sm-3 ms-xs-1">
               <button class="btn btn-info  bg-info text-light rounded-3  " type="submit">Search</button>
             </div>
-            <div class="col-lg-2 col-sm-2"> 
+            <div class="col-lg-2 col-sm-2 col-xs-2 "> 
               <button class="btn btn btn-info text-light rounded-3" data-bs-toggle="modal" data-bs-target="#exampleModal">login</button>
             </div> 
           </div>
@@ -359,8 +359,8 @@
     <h1 class="text-light egypt text-uppercase">Popular destination in Egypt</h1>
   </div> 
   <div class="mt-lg-5 ">
-    <div class="row gx-lg-5 mb-lg-5 mx-lg-5">
-      <div class="col-lg-4 col-sm-12 px-lg-5 px-sm-3 mb-lg-0 mb-sm-3 mb-xs-3">
+    <div class="row gx-lg-5 gy-4 mb-lg-5 mx-lg-5 mt-2">
+      <div class="col-lg-4 col-sm-12 px-lg-5 px-xs-3 mb-lg-0 mb-sm-3 mb-xs-3">
         <div class="card shadow-lg h-100  card-item" >
           <img src="image/el-cairo1.jpg" 
           class="card-img-top m-auto px-3 " 
@@ -402,7 +402,7 @@
         </div>
       </div>
     </div> <!-- //row -->
-    <div class="row gx-lg-5 mb-lg-5 mx-lg-5">
+    <div class="row gx-lg-5 gy-4 mb-lg-5 mx-lg-5 mt-2">
       <div class="col-lg-4 col-sm-12 px-lg-5 px-sm-3  mb-lg-0 mb-sm-3 mb-xs-3">
         <div class="card shadow-lg h-100 card-item " >
           <img src="image/aswan.jpg" 
@@ -441,7 +441,7 @@
         </div>
       </div>
     </div> <!-- //row -->
-    <div class="row  gx-lg-5 mb-lg-5 mx-lg-5 justify-content-around">
+    <div class="row  gx-lg-5 gy-4 mb-lg-5 mx-lg-5 justify-content-around mt-2">
       <div class="col-lg-4 col-sm-12 px-lg-5 px-sm-3  mb-lg-0 mb-sm-3 mb-xs-3">
         <div class="card shadow-lg h-100  card-item " >
           <img src="image/siwa-oasis-1230758-1598x1069-1.jpg" 
@@ -477,8 +477,8 @@
   <div class="P_des second-bg text-center p-3 rounded-3 mb-3">
     <h1 class="text-light egypt"> Thank for</h1>
   </div>  
-  <div class="mx-lg-5 mx-sm-3 mt-5 pb-4">
-    <div class="row mx-lg-5">
+  <div class="mx-lg-5 mx-xs-3 mt-5 pb-4">
+    <div class="row mx-lg-5 gy-3">
       <div class="col-lg-4 active-card mb-lg-0 mb-sm-3">
         <div class="card text-white shadow" >
           <img class="card-img-top " src="image/p1.jpg"
@@ -551,11 +551,11 @@
       <div class="order-2 " >
         <img src="image/clip.jpg" class="clip_path  h-100" alt="">
       </div>
-      <div class=" mb-lg-5 ps-5 pt-5 pb-5 pe-sm-4 order-1 ">
+      <div class=" mb-lg-2 ps-5 pt-5 pb-5 pe-xs-4 order-1 ">
           <h3 class="pt-lg-3">Podacast Title</h3>
           <span><i class="fas fa-calendar-alt"></i> Sun, Aug 11th 2024</span>
           <p class="head-title bg-primary mt-3"></p>
-          <p class="fs-5 lh-base mb-lg-5 mb-sm-2 " style="text-align: justify;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi, fugiat asperiores inventore beatae accusamus odit minima enim, commodi quia, doloribus eius! Ducimus nemo accusantium maiores velit corrupti tempora reiciendis molestiae repellat vero. Eveniet ipsam adipisci illo iusto quibusdam, sunt neque nulla unde ipsum dolores nobis enim quidem excepturi, illum quos!</p>
+          <p class="fs-5 lh-base mb-lg-5 mb-sm-2 pe-lg-0 pe-4" style="text-align: justify;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi, fugiat asperiores inventore beatae accusamus odit minima enim, commodi quia, doloribus eius! Ducimus nemo accusantium maiores velit corrupti tempora reiciendis molestiae repellat vero. Eveniet ipsam adipisci illo iusto quibusdam, sunt neque nulla unde ipsum dolores nobis enim quidem excepturi, illum quos!</p>
             <button type="button" class="btn btn-secondary mt-5" ><i class="fas fa-podcast"></i> Podcast</button>
             <button type="button" class="btn btn-secondary mt-5"><i class="fas fa-clock"></i> 55 mins.</button>
             <button type="button" class="btn btn-outline-primary mt-5"><i class="fas fa-play text-dark"> Play Episode</i></button>
@@ -565,13 +565,13 @@
     
     <div class=" line_hover border  special-shadow  d-lg-flex mx-lg-5 mx-sm-3 mb-5" style="background-color:#e6ffff; border-radius: 10px">   
       <div class="w-25 vvvv" >
-        <img src="image/clip-2.jpg" class="clip_path2" alt="">
+        <img src="image/clip-2.jpg" class="clip_path2 h-100" alt="">
       </div>
-      <div class="mb-lg-2 mb-sm-5 pe-lg-5 pe-sm-4 ps-lg-0 ps-sm-5 pt-5">
+      <div class="mb-lg-2 pb-5 mb-sm-5 pe-lg-5 pe-sm-4 ps-lg-0 ps-5 pt-5">
           <h3 class="pt-lg-3 pt-sm-2">Podacast Title</h3>
           <span><i class="fas fa-calendar-alt"></i> Sun, Aug 11th 2024</span>
           <p class="head-title bg-danger mt-3"></p>
-          <p class="fs-5 lh-base mb-lg-5 mb-sm-2 " style="text-align: justify;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi, fugiat asperiores inventore beatae accusamus odit minima enim, commodi quia, doloribus eius! Ducimus nemo accusantium maiores velit corrupti tempora reiciendis molestiae repellat vero. Eveniet ipsam adipisci illo iusto quibusdam, sunt neque nulla unde ipsum dolores nobis enim quidem excepturi, illum quos!</p>
+          <p class="fs-5 lh-base mb-lg-5 mb-sm-2 pe-4" style="text-align: justify;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi, fugiat asperiores inventore beatae accusamus odit minima enim, commodi quia, doloribus eius! Ducimus nemo accusantium maiores velit corrupti tempora reiciendis molestiae repellat vero. Eveniet ipsam adipisci illo iusto quibusdam, sunt neque nulla unde ipsum dolores nobis enim quidem excepturi, illum quos!</p>
             <button type="button" class="btn btn-secondary mt-5" ><i class="fas fa-podcast"></i> Podcast</button>
             <button type="button" class="btn btn-secondary mt-5"><i class="fas fa-clock"></i> 55 mins.</button>
             <button type="button" class="btn btn-outline-danger mt-5"><i class="fas fa-play text-dark"> Play Episode</i></button>
@@ -582,11 +582,11 @@
       <div class="order-2 " >
         <img src="image/clip-3.webp" class="clip_path h-100 " alt="">
       </div>
-      <div class=" mb-lg-5 ps-5 pt-5 pb-5 pe-sm-4 order-1  ">
+      <div class=" mb-lg-2 ps-5 pt-5 pb-5 pe-sm-4 order-1  ">
           <h3 class="pt-lg-3">Podacast Title</h3>
           <span><i class="fas fa-calendar-alt"></i> Sun, Aug 11th 2024</span>
           <p class="head-title bg-success mt-3"></p>
-          <p class="fs-5 lh-base mb-lg-5 mb-sm-2 " style="text-align: justify;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi, fugiat asperiores inventore beatae accusamus odit minima enim, commodi quia, doloribus eius! Ducimus nemo accusantium maiores velit corrupti tempora reiciendis molestiae repellat vero. Eveniet ipsam adipisci illo iusto quibusdam, sunt neque nulla unde ipsum dolores nobis enim quidem excepturi, illum quos!</p>
+          <p class="fs-5 lh-base mb-lg-5 mb-sm-2 pe-lg-0 pe-4" style="text-align: justify;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi, fugiat asperiores inventore beatae accusamus odit minima enim, commodi quia, doloribus eius! Ducimus nemo accusantium maiores velit corrupti tempora reiciendis molestiae repellat vero. Eveniet ipsam adipisci illo iusto quibusdam, sunt neque nulla unde ipsum dolores nobis enim quidem excepturi, illum quos!</p>
             <button type="button" class="btn btn-secondary mt-5" ><i class="fas fa-podcast"></i> Podcast</button>
             <button type="button" class="btn btn-secondary mt-5"><i class="fas fa-clock"></i> 55 mins.</button>
             <button type="button" class="btn btn-outline-success mt-5"><i class="fas fa-play text-dark"> Play Episode</i></button>
@@ -597,18 +597,18 @@
       <div class="w-25 vvvv " >
         <img src="image/clip-4.avif" class="clip_path2 h-100 " alt="" >
       </div>
-      <div class="mb-lg-2 mb-sm-5 pt-lg-5 pe-lg-5 pe-sm-4 ps-lg-0 ps-sm-5">
-          <h3 class="pt-lg-5 pt-sm-5">Podacast Title</h3>
+      <div class="mb-lg-2 pb-5 pt-lg-5 pe-lg-5 pe-sm-4 ps-lg-0 ps-5">
+          <h3 class="pt-lg-2 pt-5">Podacast Title</h3>
           <span><i class="fas fa-calendar-alt"></i> Sun, Aug 11th 2024</span>
           <p class="head-title bg-warning mt-3"></p>
-          <p class="fs-5 lh-base mb-lg-5 mb-sm-2 " style="text-align: justify;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi, fugiat asperiores inventore beatae accusamus odit minima enim, commodi quia, doloribus eius! Ducimus nemo accusantium maiores velit corrupti tempora reiciendis molestiae repellat vero. Eveniet ipsam adipisci illo iusto quibusdam, sunt neque nulla unde ipsum dolores nobis enim quidem excepturi, illum quos!</p>
+          <p class="fs-5 lh-base mb-lg-5 mb-sm-2 pe-4" style="text-align: justify;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi, fugiat asperiores inventore beatae accusamus odit minima enim, commodi quia, doloribus eius! Ducimus nemo accusantium maiores velit corrupti tempora reiciendis molestiae repellat vero. Eveniet ipsam adipisci illo iusto quibusdam, sunt neque nulla unde ipsum dolores nobis enim quidem excepturi, illum quos!</p>
             <button type="button" class="btn btn-secondary mt-5" ><i class="fas fa-podcast"></i> Podcast</button>
             <button type="button" class="btn btn-secondary mt-5"><i class="fas fa-clock"></i> 55 mins.</button>
             <button type="button" class="btn btn-outline-warning mt-5"><i class="fas fa-play text-dark"> Play Episode</i></button>
         </div>
     </div>  
 
-    <div class="row gx-lg-5 mx-4 gy-lg-0 gy-sm-5">
+    <div class="row gx-lg-5 mx-4 gy-lg-0 gy-5">
       <div class="P_des text-center p-3 rounded-3 mb-lg-3">
         <h1 class="text-light egypt text-uppercase fw-bold"> Join US</h1>
       </div> 
