--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
   <div class="p-4 ps-5">
     <h2 class="egypt"> WELCOME</h2>
     <p class="fs-4 text-white pe-4" style="text-align: justify;"> Are you planning to visit Egypt? we offer the ultimate tour in Egypt, covering Cairo,alex. From a one day to a 10 day dream vacation, we will take care of all your needs. book hotels. 24/7 Customer Service.</p>
-    <button type="button" class="btn btn-light text-info px-3">Learn more</button>
+    <button type="button" class="btn btn-light text-info px-3">Learn More</button>
   </div>
 </div>
 
