--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
     <span class="visually-hidden">Next</span>
   </button>
 </div>
-<div class="h_icons visually-hidden">
+<div class="h_icons">
   <ul>
     <li ><i class="fab fa-facebook-square"></i></li>
     <li><i class="fab fa-whatsapp-square"></i></li>
@@ -292,9 +292,6 @@
     <div>
       <h3 class="d-inline-block text-white">Write and Translate</h3> <span class="fs-3 text-secondary">Press Here</span>
     </div>
-    <!-- <button type="button" class="btn btn-light text-info fs-4" data-bs-container="body" data-bs-toggle="popover" data-bs-placement="right" data-bs-content="Copied">
-      Copy
-    </button> -->
     <button type="button" class="btn btn-light text-info fs-5  position-relative" id="CopY"  >
       Copy <span class="position-absolute top-100 start-100 badge   bg-secondary copyButton text-wrap">copy to clipboard</span>
       <span class="position-absolute top-100 start-100  badge  bg-secondary copyButton text-wrap">copied successfully</span>
